--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>https://jaberqayad.github.io/en/</title>
-    <link rel="canonical" href="https://jaberqayad.github.io/en/">
+    <title>https://blog.weken.site/en/</title>
+    <link rel="canonical" href="https://blog.weken.site/en/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://jaberqayad.github.io/en/">
+    <meta http-equiv="refresh" content="0; url=https://blog.weken.site/en/">
   </head>
 </html>
